2007-07-11  Milan Zamazal  <pdm@brailcom.org>

	* src/modules/module_utils.h (CLEAN_OLD_SETTINGS_TABLE): Fix of
	typo in a variable name.

2007-07-11  Milan Zamazal  <pdm@brailcom.org>

	* src/modules/festival.c (module_speak): Use
	UPDATE_STRING_PARAMETER instead of UPDATE_PARAMETER for updating
	synthesis_voice.

	* src/modules/module_utils.h (CLEAN_OLD_SETTINGS_TABLE)
	(INIT_SETTINGS_TABLES): Add synthesis_voice.

2007-07-11  Milan Zamazal  <pdm@brailcom.org>
	
	* src/modules/festival_client.c: Use FEST_SET_SYMB instead of
	FEST_SET_STR for FestivalSetSynthesisVoice.

2007-07-10  Lukas Loehrer  <listaddr1@gmx.net>

	* src/modules/espeak.c (module_close): Before calling
	pthread_join(), make sure threads have really exited by calling
	pthread_cancel().
	(_espeak_play): Fixed potential race with stop thread.
	(_espeak_play , _espeak_stop_or_pause): Work around spurious sem_post()
	after wake-up-up from suspend-to-disk.

2007-07-10  Tomas Cerha  <cerha@brailcom.org>

	* config/speechd.conf.in: Espeak module added.  Descriptions
	improved.

2007-07-09  Tomas Cerha  <cerha@brailcom.org>

	* INSTALL: Minor improvements of the "User applications" section.

2007-07-09  Lukas Loehrer  <listaddr1@gmx.net>

	* src/modules/espeak.c
	(synth_callback): Use gnit64 to hold
	temporary value to prevent integer overflow in long messages.
	Set default value of EspeakNASServer to "localhost" (fixes warning.
	(module_speak): Removed spurious <speak> tags.

2007-07-08  Hynek Hanke  <hanke@brailcom.org>

	* AUTHORS: Added Steve Holmes and Lukas Loehrer.

	* doc/ssip.texi: LIST SYNTHESIS_VOICES and SET SYNTHESIS VOICE added.

	* INSTALL: Sections reorganized. Added notes about Espeak.

	* ANNOUNCE: Updated for 0.6.3 relese.

	* NEWS: Updated for 0.6.3 relese.

	* config/speechd.conf: Added AddModule line for espeak (native) driver.

	* src/server/output.c (_output_get_voices): Check if reply is not
	null.

2007-07-08  Steve Holmes  <steve@holmesgrown.com>
